--- a/TestProject.WebSite/Pages/Index.cshtml
+++ b/TestProject.WebSite/Pages/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using TestProject.WebSite.Components
 @model IndexModel
 @{
     ViewData["Title"] = "Indexx page";
@@ -9,14 +10,7 @@
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
-<div class="row row-cols-3 gy-5">
-    @foreach(var product in Model.Products)
-    {
-        <div class="card">
-            <div class="card-img" style="background-image: url('@product.Image');"></div>
-            <div class="card-body">
-                    <h5 class="card-title">@product.Title</h5>
-            </div>
-        </div>
-    }
-</div>
+
+<component type="typeof(ProductList)" render-mode="ServerPrerendered" />
+
+<script src="_framework/blazor.server.js"></script>
