--- a/TestProject.WebSite/Pages/Index.cshtml
+++ b/TestProject.WebSite/Pages/Index.cshtml
@@ -10,6 +10,6 @@
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
-<component type="typeof(ProductList)" render-mode="ServerPrerendered" />
+<component type="typeof(ProductList)" render-mode="ServerPrerendered" Products="Model.Products" />
 
 <script src="_framework/blazor.server.js"></script>
